@@ -1,11 +1,0 @@
-<samba:parameter name="smb3 unix extensions"
-                 context="G"
-                 type="boolean"
-		 function="_smb3_unix_extensions"
-                 xmlns:samba="http://www.samba.org/samba/DTD/samba-doc">
-  <description>
-    <para>Incomplete SMB 3.11 Unix Extensions. This is only available
-    if Samba is compiled in DEVELOPER mode.</para>
-  </description>
-  <value type="default">no</value>
-</samba:parameter>
